# Projeto_envio_criterio

./: .gitignore  README.md  brcaal5534  brcaal5534.pub  criteriossgo.spec  envio_criterio.lnk  mov_envio_criterio.bat  pyproject.toml
app/: CriteriosSGO.py  main.py
app/jsons/: MV sem HMS HMC FSC.json  Usuarios CLOUD BI.json  teste envio.json
tests/: __init__.py  test_arquivo.ipynb  test_envio.ipynb
tests/data/: CLOUD BI.xlsx  Computadores sem HMS FSC.xlsx  DIGITRO HSI.xlsx  LUXUS.xlsx  MV HSI.xlsx  MV sem HMS HMC FSC.xlsx  Medportal.xlsx  OI HMS.xlsx  OI TRONCO CORP.xlsx  Pega Plantao.xlsx  QUALYCOPY.xlsx  VIVO CORP.xlsx  VIVO HSI.xlsx
tests/jsons/: CLOUD BI.json  Computadores sem HMS FSC.json  DIGITRO HSI.json  LUXUS.json  MV HSI.json  MV sem HMS HMC FSC.json  Medportal.json  OI HMS.json  OI TRONCO CORP.json  Pega Plantao.json  QUALYCOPY.json  VIVO CORP.json  VIVO HSI.json  teste envio.json
